clusters/k4/kubernetes/apps/media/autobrr/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: autobrr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ${APP}
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "6697"
              protocol: ANY
